# Trader_Bot

./: CMakeLists.txt  README.md  TODO  main_window.cpp  resource.qrc
asos_root/: binance_account_page.h  fake_account_page.h  history_page.h  logger_page.h
asos_root/account/: account_interface.h  coin_list.h  configs.h
asos_root/charts/: candle_graph.h  line_graph.h
asos_root/connections/: binance_rest_api.h  binance_web_socket.h  rest_api_structs.h
asos_root/custom_widgets/: as_candle_chart.h  as_date_selector.h  as_progressbar.h
asos_root/generals/: ohlc.h
asos_root/strategies/: trade_strategy_interface.h
asos_root/strategies/ex/: aaxe_long_st.h  aaxe_mid_st.h  aaxe_short_st.h  asos_high_risk_strategy.h  asos_low_risk_strategy.h  chatgpt2_strategy.h  chatgpt_strategy.h  fax_strategy.h  fido_strategy.h  fidorsi_strategy.h  fire_strategy.h  fxal_strategy.h  macd_strategy.h  sf_strategy.h  simple_mx_pro_strategy.h  simple_mx_strategy.h  template_strategy.h
